Spec fixes, implementation of MLFlow serving

--- a/application/src/main/resources/application.yml
+++ b/application/src/main/resources/application.yml
@@ -73,6 +73,8 @@ runtime:
     command: /usr/local/bin/processor
   sklearnserve:
     image: ${RUNTIME_SKLEARN_SERVE_IMAGE:kserve/sklearnserver:latest}
+  mlflowserve:
+    image: ${RUNTIME_MLFLOW_SERVE_IMAGE:seldonio/mlserver:1.6.0-mlflow}
 
 # Spring Docs
 springdoc:
