--- a/application/pom.xml
+++ b/application/pom.xml
@@ -75,6 +75,10 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-cache</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-amqp</artifactId>
         </dependency>
         <dependency>
@@ -102,7 +106,7 @@
             <artifactId>hibernate-jpamodelgen</artifactId>
             <!-- <version>${hibernate.version}</version> -->
             <!-- workaround for bug in hibernate - use last working version for metamodels  -->
-             <version>6.4.9.Final</version> 
+            <version>6.4.9.Final</version>
         </dependency>
 
         <dependency>
