--- a/modules/framework-k8s/pom.xml
+++ b/modules/framework-k8s/pom.xml
@@ -105,6 +105,12 @@
             <artifactId>byte-buddy</artifactId>
             <version>1.14.17</version>
         </dependency>
+        <dependency>
+            <groupId>it.smartcommunitylabdhub</groupId>
+            <artifactId>dh-sidecars</artifactId>
+            <version>0.7.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 
