feat: json schema custom generator for serializable fields + proxy building for specs before generation

--- a/modules/commons/pom.xml
+++ b/modules/commons/pom.xml
@@ -100,7 +100,11 @@
             <artifactId>jsonschema-module-swagger-2</artifactId>
             <version>${jsonschema.version}</version>
         </dependency>
-
+        <dependency>
+            <groupId>net.bytebuddy</groupId>
+            <artifactId>byte-buddy</artifactId>
+            <version>1.14.17</version>
+        </dependency>
 
         <!-- JUnit 5 Jupiter API for writing tests -->
         <dependency>
