--- a/application/src/main/resources/application.yml
+++ b/application/src/main/resources/application.yml
@@ -115,7 +115,17 @@ kubernetes:
   envs:
     prefix: ${K8S_ENVS_PREFIX:${application.name}}    
   image-pull-policy: ${K8S_IMAGE_PULL_POLICY:IfNotPresent}
-  init-image: ${K8S_INIT_IMAGE:ghcr.io/scc-digitalhub/digitalhub-core-builder-tool:latest}
+  init:
+    image: ${K8S_INIT_IMAGE:ghcr.io/scc-digitalhub/digitalhub-core-builder-tool:latest}
+    command: "/bin/bash,-c,/app/builder-tool.sh"
+  shared-volume:
+    volume_type: empty_dir
+    name: shared-dir
+    mount_path: /shared
+    spec:
+      sizeLimit: 100Mi
+  service:
+    type: ${K8S_SERVICE_TYPE:NodePort}
   resources:
     cpu:
       requests: ${K8S_RESOURCE_CPU_DEFAULT:100m}
