--- a/application/src/main/resources/application.yml
+++ b/application/src/main/resources/application.yml
@@ -72,7 +72,7 @@ runtime:
       PYTHON3_10: ${RUNTIME_PYTHON_IMAGE_3_10:ghcr.io/scc-digitalhub/digitalhub-serverless/python-runtime:3.10-latest}
     command: /usr/local/bin/processor
   sklearnserve:
-    image: ${RUNTIME_SKLEARN_SERVE_IMAGE:kserve/sklearnserver:latest}
+    image: ${RUNTIME_SKLEARN_SERVE_IMAGE:seldonio/mlserver:1.6.0-sklearn}
   mlflowserve:
     image: ${RUNTIME_MLFLOW_SERVE_IMAGE:seldonio/mlserver:1.6.0-mlflow}
   huggingfaceserve:
