--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "digitalhub-core",
-  "version": "1.0.0",
+  "version": "0.7.0",
   "private": true,
   "scripts": {
-    "prettier": "prettier --config ./.prettierrc.yml --write --list-different \"modules/*/src/**/*.java\"  \"application/src/**/*.java\""
+    "prettier": "prettier --config ./.prettierrc.yml --write --list-different \"modules/*/src/**/*.java\"  \"application/src/**/*.java\"",
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 1 --skip-unstable"
   },
   "devDependencies": {
+    "conventional-changelog-cli": "^5.0.0",
     "prettier": "^3.2.5",
     "prettier-plugin-java": "^2.5.0"
   },
