--- a/application/src/main/resources/application.yml
+++ b/application/src/main/resources/application.yml
@@ -168,6 +168,7 @@ security:
     issuer-uri: ${DH_AUTH_JWT_ISSUER_URI:${security.oidc.issuer-uri}}
     audience: ${DH_AUTH_JWT_AUDIENCE:${security.oidc.client-id}}
     claim: ${DH_AUTH_JWT_CLAIM:roles}
+    username: ${DH_AUTH_JWT_USERNAME:sub}    
   oidc:    
     issuer-uri: ${DH_AUTH_OIDC_ISSUER_URI:}
     client-id: ${DH_AUTH_OIDC_CLIENT_ID:}
