refactor: solr update + implement reindex + fixes

--- a/application/src/main/resources/application.yml
+++ b/application/src/main/resources/application.yml
@@ -200,12 +200,15 @@ monitors:
 
 # Solr configuration
 solr:
-  enabled: ${ENABLE_SOLR:false}
-  url: ${SOLR_URL:http://localhost:8983/solr}
+  url: ${SOLR_URL:false}
+  user: ${SOLR_USER:}
+  password: ${SOLR_PASSWORD:}
   collection: ${SOLR_COLLECTION:dhcore}
+  timeout: ${SOLR_TIMEOUT:5000}
+  shards: ${SOLR_COLLECTION_SHARDS_NUM:1}
+  replicas: ${SOLR_COLLECTION_REPLICATION:1}
   reindex: ${SOLR_REINDEX:never}
-  auth_user: ${SOLR_USER:}
-  auth_password: ${SOLR_PASSWORD:}
+
 
 # files support
 files:
