Add new state STOPPING, use next check from RunManager to stop the run. The run manager on the next loop receive the runnable with a stopping state and invoke stop(Run), causing call first the K8sServeListener and then the callback onStopped()

--- a/application/src/main/resources/application.yml
+++ b/application/src/main/resources/application.yml
@@ -210,5 +210,5 @@ jwt:
 # Task serve
 task:
   serve:
-    inactivity-period: ${TASK_SERVE_INACTIVITY_PERIOD:100000}
-    scale-to-zero: ${TASK_SERVE_SCALE_TO_ZERO:false}
+    inactivity-period: ${TASK_SERVE_INACTIVITY_PERIOD:50}
+    scale-to-zero: ${TASK_SERVE_SCALE_TO_ZERO:true}
