chore: build snapshot and flatten poms

--- a/application/pom.xml
+++ b/application/pom.xml
@@ -202,6 +202,11 @@
         </dependency>
         <dependency>
             <groupId>it.smartcommunitylabdhub</groupId>
+            <artifactId>dh-runtime-base</artifactId>
+            <version>${revision}</version>
+        </dependency>        
+        <dependency>
+            <groupId>it.smartcommunitylabdhub</groupId>
             <artifactId>dh-framework-k8s</artifactId>
             <version>${revision}</version>
         </dependency>
