fix: runAsUser added to the argo workflow spec

--- a/application/src/main/resources/application.yml
+++ b/application/src/main/resources/application.yml
@@ -107,6 +107,7 @@ argoworkflows:
     configmap: ${ARGOWORKFLOWS_ARTIFACTS_CONFIGMAP:artifact-repositories}
     key: ${ARGOWORKFLOWS_ARTIFACTS_KEY:default-artifact-repository}
   serviceaccount: ${ARGOWORKFLOWS_SERVICE_ACCOUNT:default}
+  user: ${ARGOWORKFLOWS_USER:1000}
 
 # Kubernetes
 kubernetes:
