feat: triggers (wip)

--- a/application/pom.xml
+++ b/application/pom.xml
@@ -255,6 +255,11 @@
         </dependency>
         <dependency>
             <groupId>it.smartcommunitylabdhub</groupId>
+            <artifactId>dh-trigger-scheduler</artifactId>
+            <version>${revision}</version>
+        </dependency>                
+        <dependency>
+            <groupId>it.smartcommunitylabdhub</groupId>
             <artifactId>dh-runtime-container</artifactId>
             <version>${revision}</version>
         </dependency>
