feat: support k8s jobs as suspended by default

--- a/application/src/main/resources/application.yml
+++ b/application/src/main/resources/application.yml
@@ -147,6 +147,7 @@ kubernetes:
   templates: ${K8S_TEMPLATES:}
   jobs:
     activeDeadlineSeconds: ${K8S_JOB_DEADLINE:259200}
+    suspend: ${K8S_JOB_SUSPEND:false}
 
 # Application endpoint
 application:
