add Template object

--- a/application/src/main/resources/templates/function/test2.yml
+++ b/application/src/main/resources/templates/function/test2.yml
@@ -1,6 +1,7 @@
 id: test2-template
 kind: huggingfaceserve
 name: llm_classification
+type: function
 metadata:
   name: llm_classification
   embedded: false
