--- a/application/pom.xml
+++ b/application/pom.xml
@@ -25,6 +25,7 @@
         <java.version>21</java.version>
         <spring-security.version>6.3.1</spring-security.version>
         <springdoc.version>2.2.0</springdoc.version>
+        <jetty.version>12.0.15</jetty.version>
         <!-- <jackson.version>2.15.3</jackson.version> -->
         <kubernetes.version>21.0.0-legacy</kubernetes.version>
         <postgresql.version>42.7.2</postgresql.version>
@@ -171,22 +172,22 @@
         <dependency>
             <groupId>org.eclipse.jetty</groupId>
             <artifactId>jetty-util</artifactId>
-            <version>10.0.19</version>
+            <version>${jetty.version}</version>
         </dependency>
         <dependency>
             <groupId>org.eclipse.jetty</groupId>
             <artifactId>jetty-client</artifactId>
-            <version>10.0.19</version>
+            <version>${jetty.version}</version>
         </dependency>
         <dependency>
             <groupId>org.eclipse.jetty</groupId>
             <artifactId>jetty-io</artifactId>
-            <version>10.0.19</version>
+            <version>${jetty.version}</version>
         </dependency>
         <dependency>
             <groupId>org.eclipse.jetty</groupId>
             <artifactId>jetty-http</artifactId>
-            <version>10.0.19</version>
+            <version>${jetty.version}</version>
         </dependency>
 
         <!-- DH MODULES -->
