feat: function templates

--- a/templates/function/python-hello-world.yaml
+++ b/templates/function/python-hello-world.yaml
@@ -1,10 +1,11 @@
+name: hello-world
 kind: python
 metadata:
   name: hello-world
   description: "Hello world with python: write a string to stdout"  
   version: 3d64037407ee4c95989a205bb4674cad
-  labels: []
-name: hello-world
+  labels:
+    - python
 spec:
   python_version: PYTHON3_10
   source:
