--- a/application/pom.xml
+++ b/application/pom.xml
@@ -25,11 +25,15 @@
         <java.version>21</java.version>
         <spring-security.version>6.3.1</spring-security.version>
         <springdoc.version>2.2.0</springdoc.version>
-        <jetty.version>12.0.15</jetty.version>
+
         <!-- <jackson.version>2.15.3</jackson.version> -->
         <kubernetes.version>21.0.0-legacy</kubernetes.version>
         <postgresql.version>42.7.2</postgresql.version>
         <mysql.version>8.0.33</mysql.version>
+        <!-- note: jetty locked to 10 due to solr 9.x incompatibility -->
+        <!-- note: do NOT set jetty.version because spring bom defines it for jetty 12 -->
+        <jetty4solr.version>10.0.24</jetty4solr.version>
+        <solr.version>9.7.0</solr.version>
         <checkstyle.config.location>../checkstyle/checkstyle.xml</checkstyle.config.location>
         <checkstyle.failOnViolation>false</checkstyle.failOnViolation>
     </properties>
@@ -167,27 +171,27 @@
         <dependency>
             <groupId>org.apache.solr</groupId>
             <artifactId>solr-solrj</artifactId>
-            <version>9.4.1</version>
+            <version>${solr.version}</version>
         </dependency>
         <dependency>
             <groupId>org.eclipse.jetty</groupId>
             <artifactId>jetty-util</artifactId>
-            <version>${jetty.version}</version>
+            <version>${jetty4solr.version}</version>
         </dependency>
         <dependency>
             <groupId>org.eclipse.jetty</groupId>
             <artifactId>jetty-client</artifactId>
-            <version>${jetty.version}</version>
+            <version>${jetty4solr.version}</version>
         </dependency>
         <dependency>
             <groupId>org.eclipse.jetty</groupId>
             <artifactId>jetty-io</artifactId>
-            <version>${jetty.version}</version>
+            <version>${jetty4solr.version}</version>
         </dependency>
         <dependency>
             <groupId>org.eclipse.jetty</groupId>
             <artifactId>jetty-http</artifactId>
-            <version>${jetty.version}</version>
+            <version>${jetty4solr.version}</version>
         </dependency>
 
         <!-- DH MODULES -->
