--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,8 @@
         <module>modules/runtime-model-serve</module>
         <module>modules/openmetadata-integration</module>
         <module>modules/files</module>
+        <module>modules/credentials-provider-db</module>        
+        <module>modules/credentials-provider-minio</module>        
         <module>frontend</module>
         <module>application</module>
     </modules>
