--- a/modules/credentials-provider-minio/pom.xml
+++ b/modules/credentials-provider-minio/pom.xml
@@ -15,6 +15,7 @@
     <description>credentials-provider-minio</description>
 
     <properties>
+        <minio.version>8.5.16</minio.version>
     </properties>
 
     <dependencies>
@@ -28,6 +29,12 @@
             <artifactId>dh-authorization</artifactId>
             <version>${revision}</version>
         </dependency>
+        <dependency>
+            <groupId>io.minio</groupId>
+            <artifactId>minio</artifactId>
+            <version>${minio.version}</version>
+        </dependency>
+
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
