feat: cred providers flow integration (wip)

--- a/modules/credentials-provider-db/pom.xml
+++ b/modules/credentials-provider-db/pom.xml
@@ -28,6 +28,12 @@
             <artifactId>dh-authorization</artifactId>
             <version>${revision}</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>${guava.version}</version>
+        </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
