--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <kubernetes.version>21.0.0-legacy</kubernetes.version>
         <maven.compiler.release>21</maven.compiler.release>
         <lombok.version>1.18.34</lombok.version>
+        <guava.version>33.3.1-jre</guava.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <checkstyle.config.location>checkstyle/checkstyle.xml</checkstyle.config.location>
         <checkstyle.failOnViolation>false</checkstyle.failOnViolation>
