--- a/application/src/main/resources/application.yml
+++ b/application/src/main/resources/application.yml
@@ -177,10 +177,12 @@ security:
     audience: ${DH_AUTH_JWT_AUDIENCE:${security.oidc.client-id}}
     claim: ${DH_AUTH_JWT_CLAIM:roles}
     username: ${DH_AUTH_JWT_USERNAME:preferred_username}    
-    redirect-uris: ${DH_AUTH_JWT_REDIRECT_URIS:http://localhost:*,${application.endpoint}}
   oidc:    
     issuer-uri: ${DH_AUTH_OIDC_ISSUER_URI:}
+    client-name: ${DH_AUTH_OIDC_CLIENT_NAME:${application.name}}
     client-id: ${DH_AUTH_OIDC_CLIENT_ID:}
+    client-secret: ${DH_AUTH_OIDC_CLIENT_SECRET:}    
+    username-attribute-name: ${DH_AUTH_OIDC_USERNAME:preferred_username} 
     scope: ${DH_AUTH_OIDC_SCOPE:openid,email,profile}
 
 
@@ -242,6 +244,7 @@ jwt:
     duration: ${JWT_REFRESH_TOKEN_DURATION:}    
   client-id: ${JWT_CLIENT_ID:${security.basic.username}}
   client-secret: ${JWT_CLIENT_SECRET:${security.basic.password}}
+  redirect-uris: ${JWT_REDIRECT_URIS:http://localhost:*,${application.endpoint}}
   cache-control: ${JWKS_CACHE_CONTROL:public, max-age=900, must-revalidate, no-transform}      
 
 
