init code (not finished)

--- a/application/pom.xml
+++ b/application/pom.xml
@@ -193,6 +193,18 @@
             <artifactId>jetty-http</artifactId>
             <version>${jetty4solr.version}</version>
         </dependency>
+        
+        <!-- LUCENE -->
+				<dependency>        
+    			<groupId>org.apache.lucene</groupId>          
+    			<artifactId>lucene-core</artifactId>
+    			<version>9.11.1</version>
+				</dependency>        
+				<dependency>
+				    <groupId>org.apache.lucene</groupId>
+				    <artifactId>lucene-queryparser</artifactId>
+				    <version>9.11.1</version>
+				</dependency>
 
         <!-- DH MODULES -->
         <dependency>
