--- a/application/src/main/resources/application.yml
+++ b/application/src/main/resources/application.yml
@@ -217,6 +217,9 @@ solr:
   replicas: ${SOLR_COLLECTION_REPLICATION:1}
   reindex: ${SOLR_REINDEX:never}
 
+lucene:
+  index-path: ${LUCENE_INDEX_PATH:false}
+  reindex: ${LUCENE_REINDEX:never}
 
 # files support
 files:
