--- a/pom.xml
+++ b/pom.xml
@@ -41,8 +41,8 @@
         <module>modules/runtime-model-serve</module>
         <module>modules/openmetadata-integration</module>
         <module>modules/files</module>
-        <module>modules/credentials-provider-db</module>        
-        <module>modules/credentials-provider-minio</module>        
+        <module>modules/credentials-provider-db</module>
+        <module>modules/credentials-provider-minio</module>
         <module>frontend</module>
         <module>application</module>
     </modules>
@@ -92,4 +92,16 @@
             </plugin>
         </plugins>
     </reporting>
+
+    <!-- TODO remove when sonata repo is sync
+    https://github.com/netplex/json-smart-v2/issues/240 -->
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>net.minidev</groupId>
+                <artifactId>json-smart</artifactId>
+                <version>2.5.2</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 </project>
