--- a/application/pom.xml
+++ b/application/pom.xml
@@ -211,6 +211,11 @@
 				  <artifactId>lucene-highlighter</artifactId>
 				  <version>${lucene.version}</version>
 				</dependency>
+				<dependency>
+				  <groupId>org.apache.lucene</groupId>
+				  <artifactId>lucene-grouping</artifactId>
+				  <version>${lucene.version}</version>
+				</dependency>
 
         <!-- DH MODULES -->
         <dependency>
