add fields xml generation

--- a/application/src/main/resources/application.yml
+++ b/application/src/main/resources/application.yml
@@ -211,8 +211,8 @@ solr:
   url: ${SOLR_URL:false}
   user: ${SOLR_USER:}
   password: ${SOLR_PASSWORD:}
-  admin-user: ${SOLR_ADMIN_USER:}
-  admin-password: ${SOLR_ADMIN_PASSWORD:}
+  admin-user: ${SOLR_ADMIN_USER:${SOLR_USER}}
+  admin-password: ${SOLR_ADMIN_PASSWORD:${SOLR_PASSWORD}}
   collection: ${SOLR_COLLECTION:dhcore}
   timeout: ${SOLR_TIMEOUT:5000}
   shards: ${SOLR_COLLECTION_SHARDS_NUM:1}
