--- a/modules/framework-k8s/pom.xml
+++ b/modules/framework-k8s/pom.xml
@@ -30,7 +30,11 @@
             <artifactId>client-java</artifactId>
             <version>${kubernetes.version}</version>
         </dependency>
-
+        <dependency>
+            <groupId>io.fabric8</groupId>
+            <artifactId>kubernetes-client</artifactId>
+            <version>7.1.0</version>
+        </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
