--- a/modules/framework-k8s/pom.xml
+++ b/modules/framework-k8s/pom.xml
@@ -14,6 +14,10 @@
     <name>framework-k8s</name>
     <description>DHCore framework-k8s</description>
 
+    <properties>
+        <fabric8.version>7.1.0</fabric8.version>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>it.smartcommunitylabdhub</groupId>
@@ -33,7 +37,7 @@
         <dependency>
             <groupId>io.fabric8</groupId>
             <artifactId>kubernetes-client</artifactId>
-            <version>7.1.0</version>
+            <version>${fabric8.version}</version>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
