Squashed commit of the following:
commit 57e31c4cf15e780116c559c254da8bba3f786a99
Author: kazhamiakin <kazhamiakin@gmail.com>
Date:   Fri Apr 11 13:05:10 2025 +0200

    refactoring: move kubeai to a separate module

commit bd17e5b928a9c270dd3a4b5bb02d338ddea6e93f
Merge: 79df030f 287587cb
Author: kazhamiakin <kazhamiakin@gmail.com>
Date:   Mon Apr 7 13:23:39 2025 +0200

    Merge branch 'main' into kubeai

commit 79df030fd6e7e34bb9d1afe73e8d607f181d49e5
Merge: 54adf777 ff680e0c
Author: kazhamiakin <kazhamiakin@gmail.com>
Date:   Fri Apr 4 17:16:55 2025 +0200

    Merge remote-tracking branch 'origin/main' into kubeai

commit 54adf7773d1bd735f469d786a4b0bf6432720f36
Author: kazhamiakin <kazhamiakin@gmail.com>
Date:   Wed Apr 2 21:58:38 2025 +0200

    Disable default scaling

commit 722e422ef6f48a6515d79d1b7582c01dd4b62601
Merge: ccd05d1a 8a07cfc3
Author: kazhamiakin <kazhamiakin@gmail.com>
Date:   Tue Apr 1 22:25:23 2025 +0200

    Merge branch 'crd' into kubeai

commit 8a07cfc30e222ddc6d8af517d25cb7bb24798c60
Author: kazhamiakin <kazhamiakin@gmail.com>
Date:   Tue Apr 1 22:25:05 2025 +0200

    feat: K8s Custom Resource framework

commit ccd05d1a3e4f2b1915252350f8b1d1d949577439
Merge: 6ae46ea7 2abe5ef3
Author: kazhamiakin <kazhamiakin@gmail.com>
Date:   Tue Apr 1 21:26:51 2025 +0200

    Merge remote-tracking branch 'origin/main' into kubeai

commit 6ae46ea780881291d235a9a9621993f528817f35
Author: kazhamiakin <kazhamiakin@gmail.com>
Date:   Mon Mar 31 22:03:13 2025 +0200

    base profile constant

commit 42081f3458eadd074552046d840a0624dcdf3840
Merge: 4896f5cd 06617204
Author: kazhamiakin <kazhamiakin@gmail.com>
Date:   Mon Mar 31 17:18:26 2025 +0200

    Merge branch 'crd' into kubeai

commit 066172046aa58ab9e9d9500d40441f5000649c5b
Author: kazhamiakin <kazhamiakin@gmail.com>
Date:   Mon Mar 31 17:18:14 2025 +0200

    CR results management

commit 4896f5cd5ac54353ddb2d096bd115013b856abd2
Author: kazhamiakin <kazhamiakin@gmail.com>
Date:   Mon Mar 31 17:17:20 202

--- a/modules/runtime-kubeai/pom.xml
+++ b/modules/runtime-kubeai/pom.xml
@@ -10,9 +10,9 @@
         <relativePath>../../</relativePath> <!-- lookup parent from repository -->
     </parent>
     <groupId>it.smartcommunitylabdhub</groupId>
-    <artifactId>dh-runtime-model-serve</artifactId>
+    <artifactId>dh-runtime-kubeai</artifactId>
     <name>runtime-model-serve</name>
-    <description>DHCore runtime-model-serve</description>
+    <description>DHCore runtime-kubeai</description>
 
     <dependencies>
         <dependency>
